--- a/src/EFCore.SqlServer.WithNoLock/EFCore.SqlServer.WithNoLock.csproj
+++ b/src/EFCore.SqlServer.WithNoLock/EFCore.SqlServer.WithNoLock.csproj
@@ -4,10 +4,20 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Microsoft.EntityFrameworkCore.SqlServer.WithNoLock</AssemblyName>
     <RootNamespace>Microsoft.EntityFrameworkCore.SqlServer.WithNoLock</RootNamespace>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
+    <Compile Remove="WithNoLockMaterializerFactory.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="WithNoLockMaterializerFactory.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
   </ItemGroup>
 
 </Project>
